@@ -1,3 +1,4 @@
+package bootstrap.dispatcher;
 /*
  * Licensed to Elasticsearch B.V. under one or more contributor
  * license agreements. See the NOTICE file distributed with
@@ -16,7 +17,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-package java.lang;
 
 import java.lang.invoke.CallSite;
 import java.lang.invoke.ConstantCallSite;
@@ -26,7 +26,18 @@ import java.lang.invoke.MethodType;
 import java.lang.reflect.Array;
 import java.lang.reflect.Method;
 
+/**
+ * Indy bootstrap dispatcher
+ * <p>
+ * IMPORTANT: This class is relocated in a different package and stored as a classpath resource to be injected into bootstrap classloader.
+ * A copy of this resource is stored in 'src/main/resources' and should be updated by running 'mvn clean package' whenever
+ * this class is being modified. This has only an effect when running code/tests in the IDE as the resources are loaded
+ * from the project classpath and not the packaged artifact.
+ * </p>
+ */
+@SuppressWarnings("unused")
 public class IndyBootstrapDispatcher {
+
     public static Method bootstrap;
 
     private static final MethodHandle VOID_NOOP;
