@@ -48,9 +48,8 @@ public class TomcatIT extends AbstractTomcatIT {
             {"9-jre11-slim"},
             {"9.0.39-jdk14-openjdk-oracle"},
             {"jdk8-adoptopenjdk-openj9"},
-            // TODO openj9 on JDK11 has an access problem from java.base
-            //{"jdk11-adoptopenjdk-openj9"},
-            //{"9.0.50-jdk11-adoptopenjdk-openj9"}
+            {"jdk11-adoptopenjdk-openj9"},
+            {"9.0.50-jdk11-adoptopenjdk-openj9"}
         });
     }
 
