@@ -67,7 +67,7 @@
         <module>integration-tests</module>
         <module>apm-agent-attach</module>
         <module>apm-agent-plugin-sdk</module>
-        <module>apm-indy-bootstrap-module</module>
+        <module>apm-agent-bootstrap</module>
         <module>apm-agent</module>
         <module>apm-agent-attach-cli</module>
         <module>apm-agent-common</module>
@@ -513,6 +513,10 @@
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
                     <version>3.8.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>3.0.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
