@@ -32,6 +32,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fix module loading errors on J9 JVM - {pull}2341[#2341]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
